# Python_projects

./: .gitignore  README.md  requirements.txt
Database App/: demo.py  demo1.py
MP3 Player/: README.md  player.py
Rock Paper Scissors/: rock_paper_scissors.py
Rolling Dice/: rolling_dice.py
Text Editor/: text_editor.py
Tic-Tac-Toe/: tic_tac_toe.py
Tkinter/: calculator.py  checkbox.py  grid.py  messagebox.py  readio_buttons.py  statusbar.py  toolbar.py
ai_doc_summary/: main.py  pyproject.toml
ai_image_recognition/: README.md  main.py
ai_task_breakdown/: README.md  app.py  requirements.txt
ai_voice_assistant/: README.md  api.py  main.py  requirements.txt
alarm_clock/: README.md  alarm.py
api_for_llm/: README.md  main.py  requirements.txt
financial_analyzer/: README.md  __init__.py  processor.py  pyproject.toml  requirements.txt
financial_analyzer/docs/: api_reference.rst  conf.py  contributing.rst  index.rst  installation.rst
financial_analyzer/docs/_build/html/: .buildinfo  .buildinfo.bak  api_reference.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
financial_analyzer/docs/_build/html/.doctrees/: api_reference.doctree  changelog.doctree  contributing.doctree  index.doctree  installation.doctree  usage.doctree
financial_analyzer/docs/_build/html/_sources/: changelog.rst.txt  installation.rst.txt  usage.rst.txt
financial_analyzer/financial_analyzer/: __init__.py  cli.py  database.py  scraper.py  visualization.py
financial_analyzer/financial_analyzer/tests/: test_financial_analyzer.py
gui/: OOP.py  (+13 more)
(+206 files in other folders)
