[project]
name = "kmeans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.15",
    "langchain-community>=0.2.14",
    "ruff>=0.6.2",
    "langchain-ollama>=0.1.3",
    "sentence-transformers>=3.0.1",
    "unstructured[pdf]>=0.15.9",
    "pypdf>=4.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
