[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-analyzer"
version = "1.0.0"
description = "A high-performance Python tool for financial data analysis and visualization"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "aiohttp>=3.7.0",
    "beautifulsoup4>=4.9.0",
    "sqlalchemy>=1.4.0",
    "pytest>=6.0.0"
]

[project.scripts]
financial-analyzer = "financial_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["financial_analyzer/tests"]
